@@ -62,5 +62,6 @@
 "X-LIC-MIMEOPTINFO","STRING","STRING"
 "X-LIC-MIMECID","STRING","STRING"
 "X-LIC-MIMEFILENAME","STRING","STRING"
+"X-LIC-CLASS","X-LIC-CLASS","X-LIC-CLASS"
 "ANY","NO","NO"
 "NO","NO","NO"
