@@ -13,7 +13,7 @@ ATTENDEE;RSVP=FALSE;CUTYPE=ROOM:conf_Big@example.com
 ATTENDEE;ROLE=NON-PARTICIPANT;RSVP=FALSE:Mailto:E@example.com
 DTSTAMP:19970610T190000Z
 DTSTART:19970701T100000Z
-DTEND:19970701T1030000Z
+DTEND:19970701T103000Z
 SUMMARY:Conference
 UID:calsrv.example.com-873970198738776@example.com
 SEQUENCE:2
